--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Document</title>
+    <title>Spendly</title>
 </head>
 <body>
-    <h1>Hello, world!</h1>
+    <h1>Spendly</h1>
 </body>
 </html>
