update style and index

--- a/index.html
+++ b/index.html
@@ -4,18 +4,45 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <title>Spendly - Personal Finance Management</title>
+    <link rel="icon" type="image/svg+xml" href="spendly_logo.svg">
+    <link rel="manifest" href="manifest.webmanifest">
+    <title>Spendly</title>
 </head>
+
 <body>
-    <h1>Spendly</h1>
-    <p>Welcome to Spendly, your personal finance management tool!</p>
-    <table>
-        <tr>
-            <td class="logo">
-                <img src="images/spendly_logo.png" alt="Spendly Logo">
-            </td>
-        </tr>
-    </table>
+    <header class="logo-and-title">
+        <img src="spendly_logo.svg" alt="Spendly Logo" class="img">
+        <h1>Spendly</h1>
+    </header>
+    <main>
+        <section class="introduction">
+            <h2>Welcome to Spendly!</h2>
+            <p>Your personal expense tracker to help you manage your finances effectively.</p>
+        </section>
+
+        <section class="features">
+            <h2>Features</h2>
+            <div class="feature-cards">
+                <div class="card">
+                    <h3>monthly Budget</h3>
+                    <p>$0.00</p>
+                </div>
+            <div class="card">
+                    <h3>Total Expenses</h3>
+                    <p>$0.00</p>
+                </div>
+                <div class="card">
+                    <h3>Remaining Balance</h3>
+                    <p>$0.00</p>
+                </div>
+            <div class="card">
+                    <h3>Savings</h3>
+                    <p>$0.00</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    
     <script></script>
 </body>
 </html>
