--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header class="logo-and-title">
-        <img src="spendly_logo.svg" alt="Spendly Logo" class="img">
+        <img src="spendly_logo.svg" alt="Spendly Logo">
         <h1>Spendly</h1>
     </header>
     <main>
