change logo name

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/svg+xml" href="spendly_logo.svg">
-    <title>Spendly</title>
+    <title>SpendChart</title>
 </head>
 
 <body>
     <header class="logo-and-title">
-        <img src="spendly_logo.svg" alt="Spendly Logo">
-        <h1>Spendly</h1>
+        <img src="spendchart_logo.svg" alt="SpendChart Logo">
+        <h1>SpendChart</h1>
     </header>
     <main>
         <section class="introduction">
-            <h2>Welcome to Spendly!</h2>
+            <h2>Welcome to SpendChart!</h2>
             <p>Your personal expense tracker to help you manage your finances effectively.</p>
         </section>
 
